# YGameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  GameEngine.sln  ThirdPartyCode.txt  cmake_android.sh  cmake_emscripten.sh  config-msvc.h  config.h.in  init_bindir_windows.bat
DemoGame/: CMakeLists.txt  DemoGame.vcxproj  DemoGame.vcxproj.filters
DemoGame/Source/DemoGame/: BaseDemoGameState.cpp  BaseDemoGameState.h  BaseDemoWorldGameState.cpp  BaseDemoWorldGameState.h  DemoCamera.cpp  DemoCamera.h  DemoGame.cpp  DemoGame.h  DemoUtilities.cpp  DemoUtilities.h  DrawCallStressDemo.cpp  DrawCallStressDemo.h  ImGuiDemo.cpp  ImGuiDemo.h  LaunchpadGameState.cpp  LaunchpadGameState.h  Main.cpp  PrecompiledHeader.cpp  PrecompiledHeader.h  SkeletalAnimationDemo.cpp  SkeletalAnimationDemo.h
Editor/: CMakeLists.txt  Editor.vcxproj  Editor.vcxproj.filters
Editor/Source/Editor/: Common.h  Defines.cpp  Defines.h  Editor.cpp  Editor.h  EditorBlockVolumeRenderProxy.cpp  EditorBlockVolumeRenderProxy.h  EditorCVars.cpp  EditorCVars.h  EditorHelpers.cpp  EditorHelpers.h  EditorIconLibrary.cpp  EditorIconLibrary.h  EditorLightSimulator.cpp  EditorLightSimulator.h  EditorLightSimulatorControlWidget.cpp  EditorProgressCallbacks.cpp  EditorProgressCallbacks.h  EditorProgressDialog.cpp  EditorProgressDialog.h  EditorProgressDialog.ui  EditorPropertyEditorDialog.cpp  EditorPropertyEditorDialog.h  EditorPropertyEditorWidget.cpp  EditorPropertyEditorWidget.h  EditorRendererSwapChainWidget.cpp  EditorRendererSwapChainWidget.h  EditorResourcePreviewGenerator.cpp  EditorResourcePreviewGenerator.h  EditorResourcePreviewWidget.cpp  EditorResourcePreviewWidget.h  EditorResourceSaveDialog.cpp  EditorResourceSaveDialog.h  EditorResourceSelectionDialog.cpp  EditorResourceSelectionDialog.h  EditorResourceSelectionDialogModel.cpp  EditorResourceSelectionDialogModel.h  EditorResourceSelectionWidget.cpp  EditorResourceSelectionWidget.h  EditorScriptEditor.cpp  (+47 more)
Engine/: BaseGame.vcxproj  BaseGame.vcxproj.filters  BlockEngine.vcxproj  BlockEngine.vcxproj.filters  CMakeLists.txt  ContentConverter.vcxproj  ContentConverter.vcxproj.filters  ContentConverterStandalone.vcxproj  ContentConverterStandalone.vcxproj.filters  Core.vcxproj  Core.vcxproj.filters  D3D11Renderer.vcxproj  D3D11Renderer.vcxproj.filters  D3D12Renderer.vcxproj  D3D12Renderer.vcxproj.filters  Engine.vcxproj  Engine.vcxproj.filters  GameFramework.vcxproj  GameFramework.vcxproj.filters  MapCompiler.vcxproj  MapCompiler.vcxproj.filters  MapCompilerStandalone.vcxproj  MapCompilerStandalone.vcxproj.filters  MathLib.vcxproj  MathLib.vcxproj.filters  OpenGLESRenderer.vcxproj  OpenGLESRenderer.vcxproj.filters  OpenGLRenderer.vcxproj  OpenGLRenderer.vcxproj.filters  Renderer.vcxproj  Renderer.vcxproj.filters  ResourceCompiler.vcxproj  ResourceCompiler.vcxproj.filters  ResourceCompilerInterface.vcxproj  ResourceCompilerInterface.vcxproj.filters  ResourceCompilerStandalone.vcxproj  ResourceCompilerStandalone.vcxproj.filters
Engine/Dependancies/: CMakeLists.txt  HLSLTranslator.vcxproj  HLSLTranslator.vcxproj.filters  SFMT.vcxproj  SFMT.vcxproj.filters  YBaseLib.vcxproj  YBaseLib.vcxproj.filters  bullet.vcxproj  bullet.vcxproj.filters  glad.vcxproj  glad.vcxproj.filters  imgui.vcxproj  imgui.vcxproj.filters  libfif.vcxproj  libfif.vcxproj.filters  lua.vcxproj  lua.vcxproj.filters  squish.vcxproj  squish.vcxproj.filters
Engine/Dependancies/microprofile/: .hg_archival.txt  microprofile.h  microprofile_html.h  microprofileui.h
Engine/Dependancies/squish/: version.txt
Engine/Source/BaseGame/: BaseGame.cpp  BaseGame.h  CMakeLists.txt  Common.h  GameEntity.cpp  GameEntity.h  GameState.h  InteractiveEntity.cpp  InteractiveEntity.h  LivingEntity.cpp  LivingEntity.h  LoadingScreenProgressCallbacks.cpp  LoadingScreenProgressCallbacks.h  PrecompiledHeader.cpp  PrecompiledHeader.h
Engine/Source/BlockEngine/: BlockAnimation.cpp  BlockAnimation.h  BlockDrawTemplate.cpp  BlockDrawTemplate.h  BlockEngineCVars.cpp  BlockEngineCVars.h  BlockWorld.cpp  BlockWorld.h  BlockWorldChunk.cpp  BlockWorldChunk.h  BlockWorldChunkCollisionShape.cpp  BlockWorldChunkCollisionShape.h  BlockWorldChunkRenderProxy.cpp  BlockWorldChunkRenderProxy.h  BlockWorldGenerator.cpp  BlockWorldGenerator.h  BlockWorldMesher.cpp  BlockWorldMesher.h  BlockWorldSection.cpp  BlockWorldSection.h  BlockWorldTypes.h  BlockWorldVertexFactory.cpp  BlockWorldVertexFactory.h  CMakeLists.txt  PrecompiledHeader.cpp
Engine/Source/ContentConverter/: AssimpCommon.cpp  AssimpCommon.h  AssimpMaterialImporter.cpp  AssimpMaterialImporter.h  AssimpSceneImporter.cpp  AssimpSceneImporter.h  AssimpSkeletalAnimationImporter.cpp  AssimpSkeletalAnimationImporter.h  AssimpSkeletalMeshImporter.cpp  AssimpSkeletalMeshImporter.h  AssimpSkeletonImporter.cpp  AssimpSkeletonImporter.h  AssimpStaticMeshImporter.cpp  AssimpStaticMeshImporter.h  BaseImporter.cpp  BaseImporter.h  CMakeLists.txt  FontImporter.cpp  FontImporter.h  OBJImporter.cpp  OBJImporter.h  PrecompiledHeader.cpp  PrecompiledHeader.h  TextureImporter.cpp  TextureImporter.h  stb_truetype.h
Engine/Source/ContentConverterStandalone/: AssimpSceneImporter.cpp  AssimpSkeletalAnimationImporter.cpp  AssimpSkeletalMeshImporter.cpp  AssimpSkeletonImporter.cpp  AssimpStaticMeshImporter.cpp  CMakeLists.txt  ContentConverter.h  FontImporter.cpp  Main.cpp  OBJImporter.cpp  TextureImporter.cpp
Engine/Source/Core/: BSPTree.h  CMakeLists.txt  ChunkDataFormat.h  ChunkFileReader.cpp  ChunkFileReader.h  ChunkFileWriter.cpp  ChunkFileWriter.h  ClassTable.cpp  ClassTable.h  ClassTableDataFormat.h  Common.h  Console.cpp  Console.h  DDSFormat.h  DDSReader.cpp  DDSReader.h  DDSWriter.cpp  DDSWriter.h  DefinitionFile.cpp  DefinitionFile.h  FIFVolume.cpp  FIFVolume.h  Image.cpp  Image.h  ImageCodec.cpp  ImageCodec.h  ImageCodecBMP.cpp  ImageCodecDDS.cpp  ImageCodecDevIL.cpp  ImageCodecFreeImage.cpp  ImageCodecJPEG.cpp  KDTree.h  MeshUtilties.cpp  MeshUtilties.h  (+29 more)
Tests/: CMakeLists.txt  Tests.vcxproj  Tests.vcxproj.filters
Tests/Source/: MicroprofileFontImport.cpp  TestMath.cpp  TestRenderer.cpp
(+834 files in other folders)
