set(HEADER_FILES
    Source/Editor/BlockMeshEditor/EditorBlockMeshEditor.h
    Source/Editor/BlockMeshEditor/ui_EditorBlockMeshEditor.h
    Source/Editor/Common.h
    Source/Editor/Defines.h
    Source/Editor/EditorBlockVolumeRenderProxy.h
    Source/Editor/EditorCVars.h
    Source/Editor/Editor.h
    Source/Editor/EditorHelpers.h
    Source/Editor/EditorIconLibrary.h
    Source/Editor/EditorLightSimulatorControlWidget.h
    Source/Editor/EditorLightSimulator.h
    Source/Editor/EditorProgressCallbacks.h
    Source/Editor/EditorProgressDialog.h
    Source/Editor/EditorPropertyEditorDialog.h
    Source/Editor/EditorPropertyEditorWidget.h
    Source/Editor/EditorRendererSwapChainWidget.h
    Source/Editor/EditorResourcePreviewGenerator.h
    Source/Editor/EditorResourcePreviewWidget.h
    Source/Editor/EditorResourceSaveDialog.h
    Source/Editor/EditorResourceSelectionDialog.h
    Source/Editor/EditorResourceSelectionDialogModel.h
    Source/Editor/EditorResourceSelectionWidget.h
    Source/Editor/EditorScriptEditor.h
    Source/Editor/EditorSettings.h
    Source/Editor/EditorShaderGraphEditor.h
    Source/Editor/EditorVectorEditWidget.h
    Source/Editor/EditorViewController.h
    Source/Editor/EditorVirtualFileSystemModel.h
    Source/Editor/EditorVisualComponent.h
    Source/Editor/EditorVisual.h
    Source/Editor/FlowLayout.h
    Source/Editor/MapEditor/EditorCreateTerrainDialog.h
    Source/Editor/MapEditor/EditorEditMode.h
    Source/Editor/MapEditor/EditorEntityEditMode.h
    Source/Editor/MapEditor/EditorEntityIdWorldRenderer.h
    Source/Editor/MapEditor/EditorGeometryEditMode.h
    Source/Editor/MapEditor/EditorMapEditMode.h
    Source/Editor/MapEditor/EditorMapEntity.h
    Source/Editor/MapEditor/EditorMap.h
    Source/Editor/MapEditor/EditorMapViewport.h
    Source/Editor/MapEditor/EditorMapWindow.h
    Source/Editor/MapEditor/EditorTerrainEditMode.h
    Source/Editor/MapEditor/EditorWorldOutlinerWidget.h
    Source/Editor/MapEditor/ui_EditorCreateTerrainDialog.h
    Source/Editor/MapEditor/ui_EditorMapViewport.h
    Source/Editor/MapEditor/ui_EditorMapWindow.h
    Source/Editor/MaterialEditor/EditorMaterialEditor.h
    Source/Editor/MaterialShaderEditor/EditorMaterialShaderEditor.h
    Source/Editor/PrecompiledHeader.h
    Source/Editor/ResourceBrowser/EditorResourceBrowserWidget.h
    Source/Editor/ResourceBrowser/EditorStaticMeshImportDialog.h
    Source/Editor/ResourceBrowser/ui_EditorStaticMeshImportDialog.h
    Source/Editor/SignalBlocker.h
    Source/Editor/SimpleTreeModel.h
    Source/Editor/SkeletalAnimationEditor/EditorSkeletalAnimationEditor.h
    Source/Editor/SkeletalAnimationEditor/ui_EditorSkeletalAnimationEditor.h
    Source/Editor/SkeletalMeshEditor/EditorSkeletalMeshEditor.h
    Source/Editor/SkeletalMeshEditor/ui_EditorSkeletalMeshEditor.h
    Source/Editor/StaticMeshEditor/EditorStaticMeshEditor.h
    Source/Editor/StaticMeshEditor/ui_EditorStaticMeshEditor.h
    Source/Editor/ToolMenuWidget.h
    Source/Editor/ui_EditorProgressDialog.h
    Source/Editor/ui_EditorResourcePreviewWidget.h
)

set(SOURCE_FILES
    Source/Editor/BlockMeshEditor/EditorBlockMeshEditor.cpp
    Source/Editor/BlockMeshEditor/moc_EditorBlockMeshEditor.cpp
    Source/Editor/Defines.cpp
    Source/Editor/EditorBlockVolumeRenderProxy.cpp
    Source/Editor/Editor.cpp
    Source/Editor/EditorCVars.cpp
    Source/Editor/EditorHelpers.cpp
    Source/Editor/EditorIconLibrary.cpp
    Source/Editor/EditorLightSimulatorControlWidget.cpp
    Source/Editor/EditorLightSimulator.cpp
    Source/Editor/EditorProgressCallbacks.cpp
    Source/Editor/EditorProgressDialog.cpp
    Source/Editor/EditorPropertyEditorDialog.cpp
    Source/Editor/EditorPropertyEditorWidget.cpp
    Source/Editor/EditorRendererSwapChainWidget.cpp
    Source/Editor/EditorResourcePreviewGenerator.cpp
    Source/Editor/EditorResourcePreviewWidget.cpp
    Source/Editor/EditorResourceSaveDialog.cpp
    Source/Editor/EditorResourceSelectionDialog.cpp
    Source/Editor/EditorResourceSelectionDialogModel.cpp
    Source/Editor/EditorResourceSelectionWidget.cpp
    Source/Editor/EditorScriptEditor.cpp
    Source/Editor/EditorSettings.cpp
    Source/Editor/EditorShaderGraphEditor.cpp
    Source/Editor/EditorTest.cpp
    Source/Editor/EditorTypes.cpp
    Source/Editor/EditorVectorEditWidget.cpp
    Source/Editor/EditorViewController.cpp
    Source/Editor/EditorVirtualFileSystemModel.cpp
    Source/Editor/EditorVisualComponent.cpp
    Source/Editor/EditorVisual.cpp
    Source/Editor/FlowLayout.cpp
    Source/Editor/Main.cpp
    Source/Editor/MapEditor/EditorCreateTerrainDialog.cpp
    Source/Editor/MapEditor/EditorEditMode.cpp
    Source/Editor/MapEditor/EditorEntityEditMode.cpp
    Source/Editor/MapEditor/EditorEntityIdWorldRenderer.cpp
    Source/Editor/MapEditor/EditorGeometryEditMode.cpp
    Source/Editor/MapEditor/EditorMap.cpp
    Source/Editor/MapEditor/EditorMapEditMode.cpp
    Source/Editor/MapEditor/EditorMapEntity.cpp
    Source/Editor/MapEditor/EditorMapViewport.cpp
    Source/Editor/MapEditor/EditorMapWindow.cpp
    Source/Editor/MapEditor/EditorTerrainEditMode.cpp
    Source/Editor/MapEditor/EditorWorldOutlinerWidget.cpp
    Source/Editor/MapEditor/moc_EditorCreateTerrainDialog.cpp
    Source/Editor/MapEditor/moc_EditorEditMode.cpp
    Source/Editor/MapEditor/moc_EditorEntityEditMode.cpp
    Source/Editor/MapEditor/moc_EditorGeometryEditMode.cpp
    Source/Editor/MapEditor/moc_EditorMapEditMode.cpp
    Source/Editor/MapEditor/moc_EditorMapViewport.cpp
    Source/Editor/MapEditor/moc_EditorMapWindow.cpp
    Source/Editor/MapEditor/moc_EditorTerrainEditMode.cpp
    Source/Editor/MapEditor/moc_EditorWorldOutlinerWidget.cpp
    Source/Editor/MaterialEditor/EditorMaterialEditor.cpp
    Source/Editor/MaterialShaderEditor/EditorMaterialShaderEditor.cpp
    Source/Editor/moc_Editor.cpp
    Source/Editor/moc_EditorProgressDialog.cpp
    Source/Editor/moc_EditorPropertyEditorDialog.cpp
    Source/Editor/moc_EditorPropertyEditorWidget.cpp
    Source/Editor/moc_EditorRendererSwapChainWidget.cpp
    Source/Editor/moc_EditorResourcePreviewWidget.cpp
    Source/Editor/moc_EditorResourceSaveDialog.cpp
    Source/Editor/moc_EditorResourceSelectionDialog.cpp
    Source/Editor/moc_EditorResourceSelectionDialogModel.cpp
    Source/Editor/moc_EditorResourceSelectionWidget.cpp
    Source/Editor/moc_EditorScriptEditor.cpp
    Source/Editor/moc_EditorVectorEditWidget.cpp
    Source/Editor/moc_EditorVirtualFileSystemModel.cpp
    Source/Editor/moc_SimpleTreeModel.cpp
    Source/Editor/moc_ToolMenuWidget.cpp
    Source/Editor/PrecompiledHeader.cpp
    Source/Editor/rcc_Editor.cpp
    Source/Editor/ResourceBrowser/EditorResourceBrowserWidget.cpp
    Source/Editor/ResourceBrowser/EditorStaticMeshImportDialog.cpp
    Source/Editor/ResourceBrowser/moc_EditorResourceBrowserWidget.cpp
    Source/Editor/ResourceBrowser/moc_EditorStaticMeshImportDialog.cpp
    Source/Editor/SimpleTreeModel.cpp
    Source/Editor/SkeletalAnimationEditor/EditorSkeletalAnimationEditor.cpp
    Source/Editor/SkeletalAnimationEditor/moc_EditorSkeletalAnimationEditor.cpp
    Source/Editor/SkeletalMeshEditor/EditorSkeletalMeshEditor.cpp
    Source/Editor/SkeletalMeshEditor/moc_EditorSkeletalMeshEditor.cpp
    Source/Editor/StaticMeshEditor/EditorStaticMeshEditor.cpp
    Source/Editor/StaticMeshEditor/moc_EditorStaticMeshEditor.cpp
    Source/Editor/ToolMenuWidget.cpp
)

include_directories(${ENGINE_BASE_DIRECTORY}
                    ${Qt5Gui_PRIVATE_INCLUDE_DIRS}
                    ${SDL2_INCLUDE_DIR}
                    Source)

# hackfix for icu issue on linux
if(UNIX AND (NOT APPLE))
    #set(EXTRA_LIBRARIES ":libicudata.so.52")
    set(EXTRA_LIBRARIES "")
else()
    set(EXTRA_LIBRARIES "")
endif()

add_executable(Editor ${HEADER_FILES} ${SOURCE_FILES})

target_link_libraries(Editor
                      QtPropertyBrowser 
                      EngineContentConverter 
                      EngineMapCompiler 
                      EngineResourceCompiler 
                      EngineMain 
                      EngineCore
                      ${EXTRA_LIBRARIES})
    
qt5_use_modules(Editor 
                Core 
                Gui 
                Widgets)

#if(APPLE)
    #include(DeployQt5)
    #set_target_properties(Editor PROPERTIES MACOSX_BUNDLE TRUE)
    #install_qt5_executable("Source/Editor/Tools/Editor/Editor.app")
#endif()

install(TARGETS Editor DESTINATION ${INSTALL_BINARIES_DIRECTORY})
